tests/transpiler/x/scala/cast_struct.scala
// Generated by Mochi v0.10.33 on 2025-07-21 16:40:22 GMT+7
import scala.collection.mutable.{ArrayBuffer, Map}
object Main {
  def main(args: Array[String]): Unit = {
    case class Todo(title: String)
    val todo: Any = Map("title" -> "hi")
    println(todo.title)
  }
}
